# PIC-CD-UFERSA

./: .gitignore  Projeto.md  README.md  path.py  pyproject.toml  requirements.txt
data/: data.csv  estatisticas.csv  evaluation.csv  fcst_random_forest.csv  fcst_xgboost.csv  features.json  features_test_df.csv  features_train_df.csv  random_forest_best_model.json  xgboost_best_model.json
main/: evaluation.py  features.py  plots.py
notebooks/: 00_analise_exploratoria.ipynb  01_reg_linear_arima_ets.ipynb  02_feature_engineering_e_selection.ipynb  02_random_forest.ipynb  03_naive_arima_ets.ipynb  03_xgboost.ipynb  04_decision_tree.ipynb  04_reg_linear_multipla_lag.ipynb  05_random_forest.ipynb  05_random_forest_lag.ipynb  06_xgboost.ipynb  06_xgboost_lag.ipynb  07_reg_linear_multipla_lag_fourier.ipynb  08_random_forest_lag_fourier.ipynb  09_xgboost_lag_fourier.ipynb  10_decision_tree.ipynb  11_reg_linear_feature_selection.ipynb  12_random_forest_feature_selection.ipynb  13_xgboost_feature_selection.ipynb  14_random_forest_tuining.ipynb  15_xgboost_tuining.ipynb  _evaluation_class.ipynb  analise_exploratoria.ipynb  evaluation_class.ipynb  random_forest.ipynb  regressao_linear.ipynb
notebooks/data/: estatisticas.csv  evaluation.csv  features.json  features_test_df.csv  random_forest_best_model.json  test_df.csv  train_df.csv  xgboost_best_model.json
src/: cross_validation.py  features.py  outliers.py  plots.py  utils.py
